# PlatformerClone

./: CMakeLists.txt  Kor_Lib.h  gl_renderer.cpp  gl_renderer.h  main.cpp  platform.h  win32_platform.cpp
assets/shaders/: quad.frag  quad.vert
src/: Kor_Lib.h  assets.h  game.cpp  game.h  gl_renderer.cpp  gl_renderer.h  input.h  main.cpp  platform.h  render_interface.h  sound.h  win32_platform.cpp
